# stm32_f446_learning_rs

./: .gitignore  Cargo.toml  build.sh  build_binary.sh  format.sh  push.sh
.cargo/: config
src/: main.rs
