[package]
name = "stm32_f446_learning_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "1.0.0"
panic-halt = "0.2.0"
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
vcell = "0.1.3"

[dependencies.stm32f4]
version = "0.14.0"
features = ["stm32f446", "rt"]

